--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -179,6 +179,6 @@
   </div>
   <div class="lucilei">
     <!--<span>A Carrapeta 68 Mat Hidráulico Ltda - Avenida Lucio Meira, 68 - Várzea - Teresópolis - RJ 25953-003 - email: vendas@carrapeta.com<br>Futura Agência - 2016 - Commercial ver. {{versao}}</span>-->
-    <span>Futura Agência - 2016 - Commercial ver. {{versao}}</span>
+    <span>Futura Agência - {{hoje | date:'yyyy'}} - Commercial ver. {{versao}}</span>
   </div>
 </div>
