--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -5,8 +5,8 @@
       <div class="atalhos-doido-box">
         <div class="comando"><span class="label label-primary">Enter</span> Ação / Avançar</div>
         <div class="comando"><span class="label label-primary">Shift</span> + <span class="label label-primary">Enter</span> Próximo módulo</div>
-        <div class="comando"><span class="label label-primary">F1</span> Abrir busca</div>
-        <div class="comando"><span class="label label-primary">F5</span> Salvar</div>
+        <div class="comando"><span class="label label-primary">F2</span> Abrir busca</div>
+        <!--<div class="comando"><span class="label label-primary">F5</span> Salvar</div>-->
       </div>
     </div>
     <div class="agencia"><a href="http://www.futuraagencia.com.br/" target="_blank">Futura Agência</a> - 2017 - Commercial ver. {{versao}}</div>
