--- a/app/partials/modalUsuario.html
+++ b/app/partials/modalUsuario.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-sm-6">
           <h4>Email</h4>
-          <input type="text" class="form-control" ng-model="modal.usuario.email" ng-disabled="tranca()">
+          <input type="email" class="form-control" ng-model="modal.usuario.email" ng-disabled="tranca()">
         </div>
         <div class="col-sm-6">
           <h4>Nome de usuário</h4>
